Fixed SKU alignment when it doesn't fit into one line

--- a/web/css/layout/product/_common.less
+++ b/web/css/layout/product/_common.less
@@ -92,7 +92,6 @@
 
     .product-info-stock-sku {
         display: flex;
-        align-items: center;
         .lib-css(justify-content, @product-stock-wrapper__justify-content);
         gap: @2;
         .stock {
